--- a/math_sem1.tex
+++ b/math_sem1.tex
@@ -1503,6 +1503,223 @@ $$
 При $x = b: \int_{a}^b f(t) dt = \int_{a}^x f(x) dx = F(b) - f(a) \Rightarrow F(b) - F(a) = F(x)\vert_{a}^{b}$
 \boxedeq{eq:*}{\int_{a}^b f(x) dx = F(x)\vert_{a}^{b} = F(b) - F(a)}
 
+					\chapter{Несобственные интегралы, их свойства и вычисление}
+					Если существует конечный предел $\lim_{b\to{+\infty}} \int_{a}^b f(x)dx$, функции $f(x)$, которая определена на промежутке $[a;+\infty)$, то его называют \textit{несобственным интегралом} первого рода и обозначают 
+					\begin{center}
+						\boxedeq{eq:*}{\int_{a}^{+\infty} f(x)dx = \lim_{b\to{+\infty}} \int_{a}^b f(x)dx}
+					\end{center}
+					Если он существует и конечен, то это \textit{сходящийся} интеграл. В противном случае такой интеграл называют \textit{расходящимся}. Аналогично рассматривается несобственный интеграл на промежутке $(-\infty;b]$. Так как несобственный интеграл первого рода определен как предел, то из свойств интеграла и предела получаем \textit{линейности несобственного интеграла}:\\
+
+					Для любого $\alpha, \beta \in \R$ и для любых интегрируемых на промежутке $[a;b]$ функций $f(x)$ и $g(x)$:
+
+					\begin{center}
+						\boxedeq{eq*:}{\int_{a}^{+\infty}(\alpha f(x)+\beta g(x))dx = \alpha \int_{a}^{+\infty}f(x)dx+\beta \int_{a}^{+\infty}g(x)dx}
+					\end{center}
+					Данное свойство также выполняется для и для интегралов с пределами интегрирования $(-\infty;b)$ и $(-\infty;+\infty)$\\
+
+					Из свойств интеграла и предела получаем формулы замены переменной в собственном интеграле и формулы интегрирования по частям.
+					Пусть функция $y=f(x)$ интегрируема на $[a;b]$ и пусть $x=\varphi(t)$ непрерывна и дифференцируема на $[\alpha;\beta]$ и монотонна, причем $\varphi(\alpha)=a$, $\lim_{t\to{\beta-0}}\varphi(t)=\infty$ тогда:
+					$$\int_{0}^{+\infty}f(x)dx=\int_{\alpha}^{\beta}f(\varphi(t))\cdot\varphi'(t)dt$$
+					{\color{red}{\huge Я НЕ ПОНИМАЮ, ЧТО ДАЛЬШЕ НАПИСАНО. ЧТО ЭТО ЗНАЧИТ? ПОМОГИТЕ!!!}
+
+						Пусть u и v непрерывно дифференцируемы, тогда 
+						$$\int_{a}^{+\infty} udv = \lim_{b\to\infty}u(b)v(b)-u(a)v(a)-\int_{a}^{+\infty}vdu$$}
+					Аналогично можно продифференцировать и оставшиеся интегралы.\\
+
+					\textbf{Пример:}
+					Выяснить, сходится ли несобственный интеграл.
+					$$\int_{1}^{+\infty}\dfrac{dx}{x^{p}}$$
+					Рассмотрим случаи:
+					\begin{enumerate}[label=\arabic*.]
+						\item p=0\\
+
+						$\int_{1}^{+\infty}dx=\lim_{b\to{+\infty}}\int_{1}^{b}dx=\lim_{b\to{+\infty}}(x\Big|_1^b)}}=\lim_{b\to{+\infty}}(b-1)=+\infty$ -- интеграл расходится
+
+				\item p<0\\
+
+				$\int_{1}^{+\infty}\dfrac{dx}{x^{p}}=
+				\lim_{b\to{+\infty}}\int_{1}^{+\infty}\dfrac{dx}{x^{p}}=
+				\lim_{b\to{+\infty}}(\dfrac{x^{1-p}}{1-p}\Big|_1^b)}}=
+		\lim_{b\to{+\infty}}(\dfrac{b^{1-p}}{1-p}-\dfrac{1}{1-p})=+\infty$ -- интеграл расходится
+
+		\item 0<p<1\\
+
+		$\int_{1}^{+\infty}\dfrac{dx}{x^{p}}=
+		\lim_{b\to{+\infty}}\int_{1}^{+\infty}\dfrac{dx}{x^{p}}=
+		\lim_{b\to{+\infty}}(\dfrac{x^{1+p}}{1+p}\Big|_1^b)}}=
+\lim_{b\to{+\infty}}(\dfrac{b^{1+p}}{1+p}-\dfrac{1}{1+p})=+\infty$ -- интеграл расходится
+
+\item p=1\\
+
+$\int_{1}^{+\infty}\dfrac{dx}{x^{p}}=
+\lim_{b\to{+\infty}}\int_{1}^{+\infty} \ln \abs{x}=
+\infty$
+
+\item p>1\\
+
+$\int_{1}^{+\infty}\dfrac{dx}{x^{p}}=
+\lim_{b\to{+\infty}}\int_{1}^{+\infty}\dfrac{dx}{x^{p}}=
+\lim_{b\to{+\infty}}(\dfrac{x^{1-p}}{1-p}\Big|_1^b)}}=
+\lim_{b\to{+\infty}}(\dfrac{b^{1-p}}{1-p}-\dfrac{1}{1-p})=\dfrac{1}{p-1}
+$
+\end{enumerate}
+\textbf{Из этого можно сделать вывод, что при p<1 - интеграл расходится, а при p>1 - интеграл сходится к $\dfrac{1}{p-1}$}
+\section{Вопрос о сходимости интегралов}{\huge\color{red}{А признаки нужно доказывать или и так норм?}}
+\section{Множества и операции над ними}
+При выяснении неудобно пользоваться определениями, поэтому принимают \textit{признаки сходимости}
+\subsection{Признак сравнения}
+Пусть $y=f(x)$ и $y=g(x)$ неотрицательны и интегрируемы. Для любого $x \in [a;+\infty]}$ справедливо $f(x)\le g(x)$. Тогда из сходимости несобственного интеграла $\int_{a}^{+\infty}g(x)dx$ следует сходимость $\int_{a}^{+\infty}f(x)dx$, а из расходимости $\int_{a}^{+\infty}g(x)dx$ следует расходимость $\int_{a}^{+\infty}f(x)dx$.
+ \subsection{Предельный признак сравнения}
+называется элементом обозначение множества: $\{a | P(a)\}$ где P(a) - свойство, объединяющее объекты a.\\
+Пусть  $y=f(x)$ и $y=g(x)$ неотрицательны и интегрируемы на промежутке $[a;b]$ и пусть существует $\lim_{x\to{+\infty}}\dfrac{f(x)}{g(x)=1>0}$, значит они либо обе сходятся, либо обе расходятся.
+\subsection{Признак Абеля-Дирихле} {\huge \color{red}{КАК ЭТИ ВЕЩИ ВООБЩЕ СВЯЗАНЫ?}}
+Пусть  $y=f(x)$ интегрируема на промежутке $[a;b]$  и имеет первообразную $F(x)$, а $y=g(x)$ непрерывно дифференцируема на $(a;+\infty)$ и интегрируема на $[a;b]$, стремится к 0 при $x\to{+\infty}$, тогда $$\int_{a}^{+\infty}g(x)dx$$ -- сходится\\
+\textbf{Замечание:}\\
+    \item содержится: A $\subseteq$ B. Каждый элемент множества А содержится в В.
+      Предыдущий признак удобно использовать при рассмотрении несобственных интегралов дробно-рациональной функции. Его удобно сравнивать с интегралами, сходимость которых исследована. Аналогичные признаки сравнения справедливы и для оставшихся двух интегралов.\\
+Рассмотрим случай, когда на $[a;b]$ $y=f(x)$ имеет особенную точку, то есть существует $c\in[a;b]$:
+$$lim_{x\to{c+0}}=\infty$$ или $$lim_{x\to{c-0}}=\infty$$
+В этом случае вычислить $\int_{a}^{b}f(x)dx$ нельзя.\\{\huge\color{red}{на этом месте я опять отключился}}
+При c=a $$lim_{x\to{a+0}}=\infty$$
+$$\int_{a}^{b}f(x)dx-\lim\int_{a}^{b}f(x)dx$$ --
+это несобственный интеграл второго рода, если предел существует, то он сходящийся, а в противном случае рассходящийся.{\huge\color{red}{тут чет то невнятное пропустил}}
+
+\subsection{Свойства несобственного интеграла второго рода}
+Так как несобственный интеграл определяется как предел, то исходя из свойств предела получаем несобственного интеграла второго рода.
+\begin{enumerate}[label=\arabic*.]
+\item $\forall \alpha,\beta \in \R, f(x),g(x)$ интегрируемых на $[a;b]$, $a<\alpha<b$
+$$\int_{a}^{b}(\alpha f(x)+\beta g(x))dx = \alpha \int_{a}^{b}f(x)dx+\beta \int_{a}^{b}g(x)dx$$
+
+\item если $y=f(x)$ интегрируема на $[a;b]$ , $a<\alpha<b$, $x=varphi(t)$ (a;b) монотонна
+$lim_{t\to\alpha} \varphi(t)=a, \varphi(b)=b$, то
+$$\int_{a}^{b}f(x)dx=\int_{\alpha}^{\beta}f(\varphi(t))\cdot\varphi'(t)dt$$
+
+\item интегрирование по частям
+\end{enumerate}
+
+\chapter{Матрицы и операции над ними}
+\textbf{Матрица}-- прямоугольная таблица, составленная из чисел, которые называются \textit{элементами матрицы}. Элементы матрицы располагаются в горизонтальных и вертикальных рядах, которые называются строками и столбцами. Их принято нумеровать. Для матрицы важны также ее размеры, которые записываются в виде $m\times n$, где $m$ -- строки, а $n$ -- столбцы.
+$$A=\begin{pmatrix} a_{1 1} & a_{1 2} & ... & a_{1 n}\\
+a_{2 1} & a_{2 2} & ... & a_{2 n}\\ 
+... & ... & ... & ...\\
+a_{m 1} & a_{m 2} & ... & a_{m n}\end{pmatrix}$$
+Матрицы принято обозначать заглавными буквами. Иногда, чтобы указать размеры матрицы пишут $A_{m\times n}$, $B_{m\times n}$. Элементы обозначают строчными буквам $a_{i j}$, $b_{i j}$.\\
+Матрицы, где все элементы равны 0 называются \textbf{нулевыми} и записываются $O_{m\times n}$.\\
+Для квадратной матрицы определяют диагонали( \textbf{главная} -- слево на право, \textbf{побочная} -- справа налево)\\
+Квадратная матрица, у которой все элементы, кроме элементов
+главной диагонали, равны нулю, называется \textbf{диагональной}.
+$$ \lambda=\begin{pmatrix} \lambda_{1 1} & 0 & 00 & 0\\
+0 & \lambda_{2 2} & 0 & 0\\ 
+0 & 0 & \lambda{3 3} & 0\\
+0 & 0 & 0& \lambda{4 4}\end{pmatrix}$$
+Диагональная матрица, элементы главной диагонали которой равны между собой и не равны 0, называется \textit{скалярной}.\\
+Скалярная матрица, где элементы на главной диагонали равны единице называется \textit{единичной}.
+$$ E =\begin{pmatrix} 1 & 0 & 0 & 0\\
+0 & 1 & 0 & 0\\ 
+0 & 0 & 1 & 0\\
+0 & 0 & 0 & 1\end{pmatrix}$$
+Для любой матрицы определяется операция \texbf{транспонирования}:каждая строка матрицы записывается ввиде столбца.
+$$A=\begin{pmatrix} a_{1 1} & a_{1 2} & ... & a_{1 n}\\
+a_{2 1} & a_{2 2} & ... & a_{2 n}\\ 
+... & ... & ... & ...\\
+a_{m 1} & a_{m 2} & ... & a_{m n}\end{pmatrix}
+\to A^{t}=\begin{pmatrix} a_{1 1} & a_{2 1} & ... & a_{m 1}\\
+a_{1 2} & a_{2 2} & ... & a_{m 2}\\ 
+... & ... & ... & ...\\
+a_{1 n} & a_{2 n} & ... & a_{m n}\end{pmatrix}$$
+
+$$(A^{t})^{t}=A$$
+\section{Свойства сложения и вычитания}
+Для двух матриц одинаковых размеров определяются операции сложение и вычитание. Для матриц $A$ и $B$ суммой/разностью называется матрица $(A\pm B)$, элементы которой равны сумме/разности элементов матриц $A$ и $B$ то есть $A\pm B=(a_{i j}\pm b_{i j})_{m\times n}$.
+\begin{enumerate}
+\item $A+B=B+A$ -- сложение матриц коммутативно
+\item $A_{m\times n}\pm O_{m\times n}=A_{m\times n}$ -- идемпотентность сложения с нулевой матрицей
+\item $(A_{m\times n}+B_{m\times n})+C_{m\times n}=A_{m\times n}+(B_{m\times n}+C_{m\times n})$ -- ассоциативность сложения
+\item $(A\pm B)^{t}=A^{t}\pm B^{t}$
+\item $A_{m\times n} \exists B_{m\times n}: A_{m\times n}+B_{m\times n}= O_{m\times n}$\\
+Отсюда следует, что $B$ противоположна $A$ и обозначается $-A$
+\end{enumerate}
+
+\section{Свойства умножения матриц}
+\subsection{Умножение матрицы на число}
+Также для матриц определяется операция умножения на число:\\
+$A_{m\times n}\cdot \alpha=\alpha A_{m\times n}$, элементы которой являются произведением элементов матрицы $A$ и $\alpha$
+\begin{enumerate}
+\item $-1\cdot A=-A$
+\item $(\alpha + \beta)A=\alpha A + \beta A$ -- дистрибутивность
+\item $\alpha (A+B)= \alpha A + \alpha B$
+\item $\alpha \cdot \beta A = (\alpha \beta) A$
+\end{enumerate}
+\subsection{Перемножение матриц}
+Для матриц также определяется операция умножения на матрицу. Для этого матрица должна быть \textbf{согласованной} (иметь согласованные размеры): \textit{то есть количество столбцов левого множителя должно совпадать с количеством строк правого.}\\
+Пусть матрицы 	$A_{m\times n}$	и $B_{k\times p}$ имеют согласованные размеры ($n=k$). Произведением $AB$ будет называться матрица размерами $m\times p$, где 
+$$c_{i j}=\sum_{1}^{m} a_{i k}\cdot b_{k j};$$ $i= 1, 2... m\\ j= 1, 2... p$\\
+\textbf{Свойства перемножения матриц}
+\begin{enumerarte}
+
+\item  Произведение матриц не коммутативная операция то есть $AB\ne BA$, более того даже если $\exists AB$, то может $\nexists BA$	
+\item $\forall AB$ справедливо $E_{m\times n}\cdot A{m\times n}=E_{n\times m}\cdot A{m\times n}=A{m\times n}$, где E - единичная матрица.
+\item $\forall A{m\times n}\cdot O_{m\times n} = O_{m\times n} $
+\item $(AB)^{t}=A^{t}\cdot B^{t}$
+\item $\forall A, B, C$ согласованных матриц справедливо свойство ассоциативности $(AB)C=A(BC)$ 
+\item $\forall A{m\times n}, B{m\times n}, C{n\times p}$ справедливо: $(A+B)C=AC+BC$
+\end{enumerarte}
+
+\section{Определитель матрицы}
+Для любой квадратной матрицы вводится понятие \textbf{определителя}, который обозначается как $det A$\\
+Введем это понятие рекурентным образом\\
+$A_{1\times 1}\Rightarrow A=(a)\Rightarrow det A = a$\\
+Для матриц размером больше $1\times 1$ введем понятие \textbf{алгебраических дополнений}.
+Алгебраическим дополнением к $a_{i\times j}$ называется $A_{i\times j}=(-1)^{i+j}\cdot M_{i\times j}$, где $M$ - матрица, полученная из матрицы A путем вычеркивания i-ой строки и j-столбца.\\
+Определитель будет равен сумме произведений элементов первой строки и их алгебраических дополнений.\\
+Определитель матрицы $2\times 2$ является разностью произведений элементов на главной и побочной диагоналях:
+\boxedeq{eq*:}{det A_{2\times 2}= 
+\begin{pmatrix} a_{1 1} & a_{1 2}\\
+a_{2 1} & a_{2 2}\end{pmatrix}=
+a_{1 1}\cdot a_{2 2} - a_{1 2}\cdot a_{2 1} }
+Определитель матрицы $3\times 3$ можно найти по правилу Саррюса:
+$$
+\begin{vmatrix}
+\color{red}{a_{1 1}} & \color{red}{a_{1 2}} & \color{violet}{a_{1 3}}\\
+a_{2 1} & \color{violet}{a_{2 2} & \color{violet}{a_{2 3}}\\
+\color{blue}{a_{3 1}} & \color{blue}{a_{3 2}} & \color{violet}{a_{3 3}}\\
+\end{vmatrix}
+\begin{matrix}
+\color{blue}{a_{1 1}} & \color{blue}{a_{1 2}}\\
+\color{violet}{a_{2 1}} & a_{2 2}\\
+\color{red}{a_{3 1}} & \color{red}{a_{3 2}}\\
+\end{matrix}
+=a_{1 1}\cdot a_{2 2}\cdot a_{3 3} + a_{1 2}\cdot a_{2 3}\cdot a_{3 1} + a_{1 3}\cdot a_{2 1}\cdot a_{3 2} - a_{1 3}\cdot a_{2 2}\cdot a_{3 1} - a_{1 1}\cdot a_{2 3}\cdot a_{3 2} - a_{1 2}\cdot a_{2 1}\cdot a_{3 3}
+$$
+\chapter{Свойства определителя}
+\begin{enumerated}
+\item Определитель можно вычислить по любой строке матрицы (не только первой ) как сумму произведений этой строки и их алгебраических дополнений:
+\boxedeq{eq*:}{det A = a_{i 1}\cdot A_{i 1} + a_{i 2}\cdot A_{i 2} +...+ a_{i n}\cdot A_{i n}}
+\item Определитель матрицы не изменяется при транспонировании:
+\boxedeq{eq*:}{det A^{t}= det A}
+Потому все свойства строк будут верными и для столбцов. В частности определитель матрицы можно вычислить как сумму элеметов матрицы и их алгебраических дополнений:
+\boxedeq{eq*:}{det A = a_{1 j}\cdot A_{1 j} + a_{2 j}\cdot A_{2 j} +...+ a_{n j}\cdot A_{n j}}
+\item Если какая либо строка или столбец состоит только из нулей, то 
+\boxedeq{eq*:}{det A = 0}
+\item Если в матрице поменять две строки(или столбца) местами, то определитель изменит знак.
+\item Если в матрице имеется две одинаковые строки(столбца), то ее определитель равен 0.
+\item Если все элементы строки(столбца) матрицы имеют один и тот же общий множитель, то его можно вынести за знак определителя.
+\item $$det A = \begin{pmatrix} a_{1 1} & a_{1 2} & ... & a_{n 1}\\
+b_{i 1}\pm c_{i 1} & b_{i 2}\pm c_{i 2} & ... & b_{i n}\pm c_{i n}\\ 
+... & ... & ... & ...\\
+a_{n 1} & a_{n 2} & ... & a_{n n}\end{pmatrix}
+=\begin{pmatrix} a_{1 1} & a_{1 2} & ... & a_{n 1}\\
+b_{i 1} & b_{i 2} & ... & b_{i n}\\ 
+... & ... & ... & ...\\
+a_{n 1} & a_{n 2} & ... & a_{n n}\end{pmatrix} \pm
+det \begin{pmatrix} a_{1 1} & a_{1 2} & ... & a_{n 1}\\
+c_{i 1} &  c_{i 2} & ... &  c_{i n}\\ 
+... & ... & ... & ...\\
+a_{n 1} & a_{n 2} & ... & a_{n n}\end{pmatrix}$$
+\item Определитель не изменится, если к какой-нибудь её строке прибавить другую, умноженное на некоторое число.
+\item Сумма произведений элементов в какой-нибудь строке(столбце) матрицы и их алгебраических дополнений равна 0. 	
+\end{enumerated}
+      
 \setcounter{chapter}{45}
 \chapter{Поверхности второго порядка, метод сечения}
 
